Avance con problemas de compilacion

--- a/C/makefile
+++ b/C/makefile
@@ -1,8 +1,7 @@
 
 FLAGS = -lpthread
-#OBJS  = threadpool.c main.c
-#HEAD  = threadpool.h
-OBJS  = main.c
+OBJS  = queue.c threadpool.c main.c
+HEAD  = queue.h threadpool.h
 NAME  = main
 
 $(NAME): $(OBJS) $(HEAD)
