Pruebas multiplicacion matrices

--- a/C/makefile
+++ b/C/makefile
@@ -1,11 +1,11 @@
 
-FLAGS = -pthread
+FLAGS = -pthread -lm
 OBJS  = queue.c threadpool.c main.c
-HEAD  = queue.h threadpool.h
+HEAD  = queue.h threadpool.h main.h
 NAME  = main
 
 $(NAME): $(OBJS) $(HEAD)
-	gcc $(FLAGS) -o $(NAME) $(OBJS)
+	gcc $(OBJS) -o $(NAME) $(FLAGS)
 
 debug: $(OBJS) $(HEAD)
 	gcc $(FLAGS) -g -o $(NAME) $(OBJS)
